# modern-cpp-toolkit

./: .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  LICENSE  README.md  version.cmake
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci-cd.yml  ci.yml  cmake.yml
algorithms/: CMakeLists.txt
algorithms/benchmarks/: CMakeLists.txt
algorithms/examples/: CMakeLists.txt
algorithms/tests/: CMakeLists.txt
cmake/: OpticLibraryConfig.cmake.in
data_structures/: CMakeLists.txt
data_structures/benchmarks/: CMakeLists.txt
data_structures/examples/: CMakeLists.txt
data_structures/tests/: CMakeLists.txt
docs/: mainpage.md
